<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>itmo</groupId>
    <artifactId>soa</artifactId>
    <packaging>pom</packaging>

    <modules>
        <module>main-spring</module>
        <module>second-spring</module>
        <module>client</module>
        <module>service-discovery</module>
        <module>api-gw</module>
        <module>config-server</module>
    </modules>

    <version>1.0</version>
    <name>backend</name>

    <build>
        <finalName>backend</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <inherited>true</inherited>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.dependencies.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
        </dependency>

    </dependencies>

    <properties>
<!--        <jersey.version>3.1.4</jersey.version>-->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
<!--        <war.mvn.plugin.version>3.4.0</war.mvn.plugin.version>-->
        <spring.boot.maven.plugin.version>2.3.6.RELEASE</spring.boot.maven.plugin.version>
        <spring.boot.dependencies.version>2.3.6.RELEASE</spring.boot.dependencies.version>
        <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
    </properties>
</project>
